--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -246,6 +246,23 @@ else ifeq ($(platform), ps3)
 	COMMONFLAGS += -DHAVE_STRTOUL $(ENDIANNESS_DEFINES)
    STATIC_LINKING = 1
 
+# ARM
+else ifneq (,$(findstring armv,$(platform)))
+   TARGET := $(TARGET_NAME)_libretro.so
+   fpic := -fPIC
+   SHARED := -shared -Wl,--no-undefined 
+   LDFLAGS += -shared -Wl,--version-script=$(CORE_DIR)/libretro/link.T
+ifneq (,$(findstring neon,$(platform)))
+   CFLAGS += -mfpu=neon
+   HAVE_NEON = 1
+endif
+ifneq (,$(findstring softfloat,$(platform)))
+   CFLAGS += -mfloat-abi=softfp
+else ifneq (,$(findstring hardfloat,$(platform)))
+   CFLAGS += -mfloat-abi=hard
+endif
+   CFLAGS += -DARM -marm -DALIGN_DWORD -mstructure-size-boundary=32 -mthumb-interwork -falign-functions=16 -pipe -fstack-protector
+
 else ifeq ($(platform), wincross64)
    AR = x86_64-w64-mingw32-ar
    CC = x86_64-w64-mingw32-gcc
