iOS: support for building using buildbot recipe

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -125,9 +125,13 @@ else ifneq (,$(findstring ios,$(platform)))
 	ifeq ($(IOSSDK),)
 		IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
 	endif
-
-   CC = clang -arch armv7 -isysroot $(IOSSDK)
-   CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
+   ifeq ($(platform), ios-arm64)
+     CC = clang -arch arm64 -isysroot $(IOSSDK)
+     CXX = clang++ -arch arm64 -isysroot $(IOSSDK)
+   else
+     CC = clang -arch armv7 -isysroot $(IOSSDK)
+     CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
+   endif
 	COMMONFLAGS += -DIOS 
 	CFLAGS += -DHAVE_STRLCPY -DHAVE_VSNPRINTF -DHAVE_SNPRINTF -DHAVE_STPCPY
 	CXXFLAGS += -DHAVE_STRLCPY -DHAVE_VSNPRINTF -DHAVE_SNPRINTF -DHAVE_STPCPY
