--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -141,6 +141,18 @@ else ifneq (,$(findstring ios,$(platform)))
 		CC += -miphoneos-version-min=5.0
 		COMMONFLAGS += -miphoneos-version-min=5.0
 	endif
+else ifeq ($(platform), tvos-arm64)
+   TARGET := $(TARGET_NAME)_libretro_tvos.dylib
+   COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
+   fpic = -fPIC
+   LDFLAGS += -dynamiclib
+   ifeq ($(IOSSDK),)
+     IOSSDK := $(shell xcodebuild -version -sdk appletvos Path)
+   endif
+   COMMONFLAGS += -DIOS 
+   CFLAGS += -DHAVE_STRLCPY -DHAVE_VSNPRINTF -DHAVE_SNPRINTF -DHAVE_STPCPY
+   CXXFLAGS += -DHAVE_STRLCPY -DHAVE_VSNPRINTF -DHAVE_SNPRINTF -DHAVE_STPCPY
+
 else ifeq ($(platform), theos_ios)
 DEPLOYMENT_IOSVERSION = 5.0
 TARGET = iphone:latest:$(DEPLOYMENT_IOSVERSION)
