--- a/vice/src/resid/configure.in
+++ b/vice/src/resid/configure.in
@@ -52,6 +52,21 @@ AS_IF([test "$enable_branch_hints" != no],
   [AC_SUBST([RESID_BRANCH_HINTS], [1])],
   [AC_SUBST([RESID_BRANCH_HINTS], [0])])
 
+dnl Enable experimental 8580 filters.
+AC_ARG_ENABLE([new8580filter],
+  [AS_HELP_STRING([--enable-new8580filter],
+    [enable new 8580 filter implementation [default=no]]
+  )],
+  [],
+  [enable_new8580filter=no]
+)
+AM_CONDITIONAL([NEW_8580_FILTER], [test x$enable_new8580filter != xno])
+AS_IF([test "x$enable_new8580filter" = "xno"],
+  [NEW_8580_FILTER=0],
+  [NEW_8580_FILTER=1]
+)
+AC_SUBST([NEW_8580_FILTER])
+
 dnl Store CXXFLAGS status.
 resid_test_CXXFLAGS=${CXXFLAGS+set}
 
