--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -350,6 +350,9 @@ CXXFLAGS    += -D__LIBRETRO__ $(fpic) $(INCFLAGS) $(COMMONFLAGS)
 CFLAGS      += -D__LIBRETRO__ $(fpic) $(INCFLAGS) $(COMMONFLAGS)
 LDFLAGS     += -lm $(fpic)
 
+$(info CFLAGS: $(CFLAGS))
+$(info -------)
+
 ifeq ($(platform), theos_ios)
 COMMON_FLAGS := -DIOS -DARM $(COMMON_DEFINES) $(INCFLAGS) -I$(THEOS_INCLUDE_PATH) -Wno-error
 $(LIBRARY_NAME)_CFLAGS += $(CFLAGS) $(COMMON_FLAGS)
@@ -360,19 +363,24 @@ else
 all: $(TARGET)
 $(TARGET): $(OBJECTS)
 ifeq ($(STATIC_LINKING), 1)
-	$(AR) rcs $@ $(OBJECTS)
+	@echo $(AR): $@
+	@$(AR) rcs $@ $(OBJECTS)
 else
-	$(CXX) -o $@ $(OBJECTS) $(LDFLAGS)
+	@echo $(CXX): $@
+	@$(CXX) -o $@ $(OBJECTS) $(LDFLAGS)
 endif
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $^ -o $@
+	@echo $(CC): $^
+	@$(CC) $(CFLAGS) -c $^ -o $@
 
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $^ -o $@
+	@echo $(CXX): $^
+	@$(CXX) $(CXXFLAGS) -c $^ -o $@
 
 %.o: %.cc
-	$(CC) $(CFLAGS) -c $^ -o $@
+	@echo $(CC): $^
+	@$(CC) $(CFLAGS) -c $^ -o $@
 
 clean:
 	rm -f $(OBJECTS) $(TARGET)
