--- a/Makefile.x64scpu
+++ b/Makefile.x64scpu
@@ -34,7 +34,7 @@ INCFLAGS += \
         -I$(EMU)/viciisc \
         -I$(EMU)/video
 
-SOURCES_CC += \
+SOURCES_CXX += \
         $(EMU)/resid/dac.cc \
         $(EMU)/resid/envelope.cc \
         $(EMU)/resid/extfilt.cc \
