Remove Nuklear GUI, Add VKBD touch control

--- a/Makefile.common
+++ b/Makefile.common
@@ -1,5 +1,4 @@
 EMU        := $(CORE_DIR)/vice/src
-GUI        := $(CORE_DIR)/libretro/nukleargui
 DEPS_DIR   := $(CORE_DIR)/deps
 LIBRETRO_COMM_DIR := $(CORE_DIR)/libretro-common
 
@@ -8,9 +7,6 @@ INCFLAGS += \
 				-I$(CORE_DIR)/libretro/include \
 				-I$(LIBRETRO_COMM_DIR)/include \
 				-I$(CORE_DIR)/libretro \
-				-I$(GUI) \
-				-I$(GUI)/nuklear \
-				-I$(GUI)/retro \
 				-I$(CORE_DIR)/include/embedded \
 				-I$(CORE_DIR)/include/compat \
 				-I$(CORE_DIR) -DHAVE_CONFIG_H
@@ -26,9 +22,8 @@ SOURCES_C  := \
 				 $(CORE_DIR)/libretro/retro_strings.c \
 				 $(CORE_DIR)/libretro/retro_files.c \
 				 $(CORE_DIR)/libretro/retro_disk_control.c \
-				 $(GUI)/retro/SDL_gfxPrimitives.c \
-				 $(GUI)/retro/retro_surface.c  \
-				 $(GUI)/app.c
+				 $(CORE_DIR)/libretro/vkbd.c \
+				 $(CORE_DIR)/libretro/graph.c
 
 ifeq ($(EMUTYPE), x128)
 include $(CORE_DIR)/Makefile.x128
