--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -371,6 +371,9 @@ LDFLAGS     += -lm $(fpic)
 #CFLAGS      += -std=c99
 CXXFLAGS    += -std=c++98
 
+$(info CFLAGS: $(CFLAGS))
+$(info -------)
+
 ifeq ($(platform), theos_ios)
 COMMON_FLAGS := -DIOS -DARM $(COMMON_DEFINES) $(INCFLAGS) -I$(THEOS_INCLUDE_PATH) -Wno-error
 $(LIBRARY_NAME)_CFLAGS += $(CFLAGS) $(COMMON_FLAGS)
