--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -299,7 +299,19 @@ else ifeq ($(platform), ps3)
    CC      = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
    CXX     = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-g++.exe
    AR      = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
-   ENDIANNESS_DEFINES := -DMSB_FIRST
+   ENDIANNESS_DEFINES := -DMSB_FIRST -DWORDS_BIGENDIAN=1
+   OLD_GCC := 1
+	COMMONFLAGS += -DHAVE_STRTOUL $(ENDIANNESS_DEFINES)
+   STATIC_LINKING = 1
+
+# Lightweight PS3 Homebrew SDK
+else ifeq ($(platform), psl1ght)
+   TARGET := $(TARGET_NAME)_libretro_$(platform).a
+   CC = $(PS3DEV)/ppu/bin/ppu-gcc$(EXE_EXT)
+   CXX = $(PS3DEV)/ppu/bin/ppu-g++$(EXE_EXT)
+   CC_AS = $(PS3DEV)/ppu/bin/ppu-gcc$(EXE_EXT)
+   AR = $(PS3DEV)/ppu/bin/ppu-ar$(EXE_EXT)
+   ENDIANNESS_DEFINES := -DMSB_FIRST -DWORDS_BIGENDIAN=1 -D__PSL1GHT__
    OLD_GCC := 1
 	COMMONFLAGS += -DHAVE_STRTOUL $(ENDIANNESS_DEFINES)
    STATIC_LINKING = 1
