--- a/Makefile.common
+++ b/Makefile.common
@@ -36,8 +36,8 @@ else ifeq ($(EMUTYPE), x64sc)
 	include $(CORE_DIR)/Makefile.x64sc
 else ifeq ($(EMUTYPE), x64dtv)
 	include $(CORE_DIR)/Makefile.x64dtv
-else ifeq ($(EMUTYPE), x64scpu)
-	include $(CORE_DIR)/Makefile.x64scpu
+else ifeq ($(EMUTYPE), xscpu64)
+	include $(CORE_DIR)/Makefile.xscpu64
 else ifeq ($(EMUTYPE), xplus4)
 	include $(CORE_DIR)/Makefile.xplus4
 else ifeq ($(EMUTYPE), xvic)
