--- a/Makefile.xcbm5x0
+++ b/Makefile.xcbm5x0
@@ -4,16 +4,15 @@ INCFLAGS += \
         -I$(EMU)/sid \
         -I$(EMU) \
         -I$(EMU)/arch/libretro \
-        -I$(EMU)/c64 \
-        -I$(EMU)/c64dtv \
-        -I$(EMU)/c64/cart \
+		-I$(EMU)/c64 \
+		-I$(EMU)/c64/cart \
+		-I$(EMU)/c64dtv \
         -I$(EMU)/cbm2 \
         -I$(EMU)/core \
         -I$(EMU)/crtc \
         -I$(EMU)/diag \
         -I$(EMU)/drive \
         -I$(EMU)/drive/iec \
-        -I$(EMU)/drive/iec/c64exp \
         -I$(EMU)/drive/ieee \
         -I$(EMU)/drive/tcbm \
         -I$(EMU)/imagecontents \
@@ -30,7 +29,6 @@ INCFLAGS += \
         -I$(EMU)/tape \
         -I$(EMU)/tapeport \
         -I$(EMU)/userport \
-        -I$(EMU)/vdc \
         -I$(EMU)/vdrive \
         -I$(EMU)/vicii \
         -I$(EMU)/video
@@ -145,13 +143,6 @@ SOURCES_C += \
 		$(EMU)/drive/drivemem.c \
 		$(EMU)/drive/driverom.c \
 		$(EMU)/drive/drivesync.c \
-		$(EMU)/drive/iec/c64exp/c64exp-cmdline-options.c \
-		$(EMU)/drive/iec/c64exp/c64exp-resources.c \
-		$(EMU)/drive/iec/c64exp/dolphindos3.c \
-		$(EMU)/drive/iec/c64exp/iec-c64exp.c \
-		$(EMU)/drive/iec/c64exp/profdos.c \
-		$(EMU)/drive/iec/c64exp/stardos-exp.c \
-		$(EMU)/drive/iec/c64exp/supercard.c \
 		$(EMU)/drive/iec/cia1571d.c \
 		$(EMU)/drive/iec/cia1581d.c \
 		$(EMU)/drive/iec/fdd.c \
@@ -200,16 +191,6 @@ SOURCES_C += \
 		$(EMU)/fsdevice/fsdevice-write.c \
 		$(EMU)/fsdevice/fsdevice.c \
 		$(EMU)/gcr.c \
-		$(EMU)/gfxoutputdrv/bmpdrv.c \
-		$(EMU)/gfxoutputdrv/doodledrv.c \
-		$(EMU)/gfxoutputdrv/gfxoutput.c \
-		$(EMU)/gfxoutputdrv/godotdrv.c \
-		$(EMU)/gfxoutputdrv/iffdrv.c \
-		$(EMU)/gfxoutputdrv/koaladrv.c \
-		$(EMU)/gfxoutputdrv/nativedrv.c \
-		$(EMU)/gfxoutputdrv/pcxdrv.c \
-		$(EMU)/gfxoutputdrv/pngdrv.c \
-		$(EMU)/gfxoutputdrv/ppmdrv.c \
 		$(EMU)/iecbus/iecbus.c \
 		$(EMU)/imagecontents/diskcontents-block.c \
 		$(EMU)/imagecontents/diskcontents-iec.c \
@@ -245,37 +226,6 @@ SOURCES_C += \
 		$(EMU)/machine.c \
 		$(EMU)/main.c \
 		$(EMU)/midi.c \
-		$(EMU)/monitor/asm6502.c \
-		$(EMU)/monitor/asm6502dtv.c \
-		$(EMU)/monitor/asm6809.c \
-		$(EMU)/monitor/asm65816.c \
-		$(EMU)/monitor/asmR65C02.c \
-		$(EMU)/monitor/asmz80.c \
-		$(EMU)/monitor/monitor.c \
-		$(EMU)/monitor/monitor_network.c \
-		$(EMU)/monitor/mon_assemble6502.c \
-		$(EMU)/monitor/mon_assemble6809.c \
-		$(EMU)/monitor/mon_assemble65816.c \
-		$(EMU)/monitor/mon_assembleR65C02.c \
-		$(EMU)/monitor/mon_assemblez80.c \
-		$(EMU)/monitor/mon_breakpoint.c \
-		$(EMU)/monitor/mon_command.c \
-		$(EMU)/monitor/mon_disassemble.c \
-		$(EMU)/monitor/mon_drive.c \
-		$(EMU)/monitor/mon_file.c \
-		$(EMU)/monitor/mon_lex.c \
-		$(EMU)/monitor/mon_memmap.c \
-		$(EMU)/monitor/mon_memory.c \
-		$(EMU)/monitor/mon_parse.c \
-		$(EMU)/monitor/mon_register.c \
-		$(EMU)/monitor/mon_register6502.c \
-		$(EMU)/monitor/mon_register6502dtv.c \
-		$(EMU)/monitor/mon_register6809.c \
-		$(EMU)/monitor/mon_register65816.c \
-		$(EMU)/monitor/mon_registerR65C02.c \
-		$(EMU)/monitor/mon_registerz80.c \
-		$(EMU)/monitor/mon_ui.c \
-		$(EMU)/monitor/mon_util.c \
 		$(EMU)/network.c \
 		$(EMU)/opencbmlib.c \
 		$(EMU)/palette.c \
@@ -326,7 +276,6 @@ SOURCES_C += \
 		$(EMU)/rtc/rtc-72421.c \
 		$(EMU)/rtc/rtc.c \
 		$(EMU)/samplerdrv/file_drv.c \
-		$(EMU)/samplerdrv/portaudio_drv.c \
 		$(EMU)/samplerdrv/sampler.c \
 		$(EMU)/screenshot.c \
 		$(EMU)/serial/fsdrive.c \
@@ -419,3 +368,10 @@ SOURCES_C += \
 		$(EMU)/zfile.c \
 		$(EMU)/zipcode.c
 
+# stubs
+SOURCES_C += \
+	$(EMU)/arch/libretro/gfxoutputdrv/gfxoutput.c \
+	$(EMU)/arch/libretro/monitor/asm6502.c \
+	$(EMU)/arch/libretro/monitor/monitor.c \
+	$(EMU)/arch/libretro/monitor/monitor_network.c \
+	$(EMU)/arch/libretro/monitor/mon_util.c
