--- a/Makefile.x64dtv
+++ b/Makefile.x64dtv
@@ -19,9 +19,7 @@ INCFLAGS += \
     -I$(EMU)/lib/p64 \
     -I$(EMU)/monitor \
     -I$(EMU)/raster \
-    -I$(EMU)/resid \
-    -I$(EMU)/residfp \
-    -I$(EMU)/residfp/builders/residfp-builder/residfp \
+    -I$(EMU)/resid-dtv \
     -I$(EMU)/rtc \
     -I$(EMU)/samplerdrv \
     -I$(EMU)/socketdrv \
@@ -33,36 +31,14 @@ INCFLAGS += \
     -I$(EMU)/video
 
 SOURCES_CXX += \
-    $(EMU)/resid/dac.cc \
-    $(EMU)/resid/envelope.cc \
-    $(EMU)/resid/extfilt.cc \
-    $(EMU)/resid/filter.cc \
-    $(EMU)/resid/pot.cc \
-    $(EMU)/resid/sid.cc \
-    $(EMU)/resid/version.cc \
-    $(EMU)/resid/voice.cc \
-    $(EMU)/resid/wave.cc \
+    $(EMU)/resid-dtv/envelope.cc \
+    $(EMU)/resid-dtv/extfilt.cc \
+    $(EMU)/resid-dtv/filter.cc \
+    $(EMU)/resid-dtv/sid.cc \
+    $(EMU)/resid-dtv/version.cc \
+    $(EMU)/resid-dtv/voice.cc \
+    $(EMU)/resid-dtv/wave.cc \
     $(EMU)/sid/resid-dtv.cc \
-    $(EMU)/sid/resid-33.cc \
-    $(EMU)/sid/resid.cc \
-    $(EMU)/sid/resid-fp.cc \
-    $(EMU)/residfp/builders/residfp-builder/residfp/version.cc \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Dac.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/EnvelopeGenerator.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/ExternalFilter.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Filter.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Filter6581.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Filter8580.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/FilterModelConfig.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/FilterModelConfig8580.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Integrator.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Integrator8580.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/OpAmp.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/resample/SincResampler.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/SID.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/Spline.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/WaveformCalculator.cpp \
-    $(EMU)/residfp/builders/residfp-builder/residfp/WaveformGenerator.cpp
 
 SOURCES_C += \
     $(EMU)/alarm.c \
